Aspect-Ratio-Cropping: added gitignore. added cropping. fixed aspect ratio.
Added gitignore file to ignore ds_store. Added cropping to images in gallery so theyre not streched. Fixed aspect ratio issue of images once expanded, no longer streched.

--- a/public/src/app/components/gallery-image/gallery-image.component.scss
+++ b/public/src/app/components/gallery-image/gallery-image.component.scss
@@ -1,5 +1,6 @@
 img {
     width: 100%;
-    height: 16em;
+    height: 30em;
     margin-bottom: 7%;
+    object-fit: cover;
 }
