--- a/public/src/app/components/modal/modal.component.scss
+++ b/public/src/app/components/modal/modal.component.scss
@@ -26,6 +26,7 @@
 }
 
 .modal-content, .actualImg {
-    height: 35em;
+    height: 39em;
+    object-fit: contain;
 }
 
